--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -224,6 +224,7 @@ configurations.all {
 }
 
 dependencies {
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
 
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
