--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -1,12 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
- Copyright (C) 2009 University of Washington Licensed under the Apache
-License, Version 2.0 (the "License"); you may not use this file except in
-compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
-Unless required by applicable law or agreed to in writing, software distributed
-under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
-OR CONDITIONS OF ANY KIND, either express or implied. See the License for
-the specific language governing permissions and limitations under the License.
--->
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="org.odk.collect.android"
@@ -26,9 +18,7 @@ the specific language governing permissions and limitations under the License.
         android:required="false" />
     <uses-feature
         android:name="android.hardware.wifi"
-        android:required="false" />
-
-    <!-- Dangerous permissions -->
+        android:required="false" /> <!-- Dangerous permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -36,15 +26,11 @@ the specific language governing permissions and limitations under the License.
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-
-    <!-- Normal permissions -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" /> <!-- Normal permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <!-- Removed in API 23 -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- Removed in API 23 -->
     <uses-permission
         android:name="android.permission.USE_CREDENTIALS"
         android:maxSdkVersion="22" />
@@ -72,13 +58,16 @@ the specific language governing permissions and limitations under the License.
 
     <application
         android:name=".application.Collect"
+        android:allowBackup="true"
         android:icon="@drawable/notes"
         android:installLocation="auto"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:allowBackup="true">
+        android:usesCleartextTraffic="true">
+
+        <activity android:name=".activities.LoginActivity"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -99,85 +88,6 @@ the specific language governing permissions and limitations under the License.
         <activity
             android:name=".activities.FormEntryActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".activities.NotificationActivity"
-            android:excludeFromRecents="true"
-            android:launchMode="singleTask"
-            android:taskAffinity=""
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
-        <activity
-            android:name=".activities.DrawActivity"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".gdrive.GoogleDriveActivity"
-            android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activities.InstanceChooserList" />
-        <activity android:name=".activities.FillBlankFormActivity" android:launchMode="singleTop"/>
-        <activity android:name=".activities.FormDownloadListActivity" />
-        <activity
-            android:name=".activities.DeleteSavedFormActivity"
-            android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".gdrive.GoogleSheetsUploaderActivity"
-            android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".activities.InstanceUploaderListActivity"
-            android:configChanges="orientation|screenSize" />
-        <activity android:name=".activities.InstanceUploaderActivity" />
-        <activity android:name=".activities.AboutActivity" />
-        <activity android:name=".configure.qr.QRCodeTabsActivity" />
-        <activity android:name=".preferences.PreferencesActivity" />
-        <activity android:name=".preferences.AdminPreferencesActivity" />
-        <activity android:name=".activities.FormHierarchyActivity" />
-        <activity android:name=".activities.ViewOnlyFormHierarchyActivity" />
-        <activity android:name=".activities.GeoPointActivity" />
-        <activity android:name=".activities.GeoPointMapActivity" />
-        <activity android:name=".activities.GeoPolyActivity" />
-        <activity android:name=".activities.FormMapActivity" />
-        <activity android:name=".activities.BearingActivity" />
-        <activity
-            android:name=".activities.SplashScreenActivity"
-            android:theme="@android:style/Theme.Dialog" />
-        <activity android:name=".activities.CaptureSelfieActivity" />
-        <activity android:name=".activities.WebViewActivity" />
-        <activity android:name=".activities.CaptureSelfieVideoActivity" />
-
-        <!-- Configure this key by setting GOOGLE_MAPS_API_KEY in collect_app/secrets.properties. -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/GOOGLE_MAPS_API_KEY" />
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"
-            tools:replace="android:value" /> <!-- integer/google_play_services_version -->
-
-        <meta-data
-            android:name="firebase_crashlytics_collection_enabled"
-            android:value="@bool/CRASHLYTICS_ENABLED" />
-
-        <uses-library
-            android:name="com.google.android.maps"
-            android:required="false" />
-
-        <!--
-             ******************External API, DO NOT CHANGE BEFORE DISCUSSING***********************
-             * The providers and activities below are available for external applications to      *
-             * integrate with and are actively in use. If one of these needs to change for some   *
-             * reason, it needs to be placed on a deprecation path so users can adapt before the  *
-             * change. If an activity needs to be renamed internally, use an activity-alias. If   *
-             * the external API needs to be expanded, introduce carefully-named actions.          *
-             **************************************************************************************
-         -->
-
-        <provider
-            android:name=".provider.FormsProvider"
-            android:authorities="org.odk.collect.android.provider.odk.forms"
-            android:exported="true" />
-        <provider
-            android:name=".provider.InstanceProvider"
-            android:authorities="org.odk.collect.android.provider.odk.instances"
-            android:exported="true" />
 
         <activity-alias
             android:name=".activities.FormEntryActivity"
@@ -194,6 +104,21 @@ the specific language governing permissions and limitations under the License.
             </intent-filter>
         </activity-alias>
 
+        <activity
+            android:name=".activities.NotificationActivity"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTask"
+            android:taskAffinity=""
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+        <activity
+            android:name=".activities.DrawActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".gdrive.GoogleDriveActivity"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".activities.InstanceChooserList" />
+
         <activity-alias
             android:name=".activities.InstanceChooserList"
             android:targetActivity=".activities.InstanceChooserList"
@@ -207,6 +132,10 @@ the specific language governing permissions and limitations under the License.
                 <data android:mimeType="vnd.android.cursor.dir/vnd.odk.instance" />
             </intent-filter>
         </activity-alias>
+
+        <activity
+            android:name=".activities.FillBlankFormActivity"
+            android:launchMode="singleTop" />
 
         <activity-alias
             android:name=".activities.FormChooserList"
@@ -223,19 +152,33 @@ the specific language governing permissions and limitations under the License.
             </intent-filter>
         </activity-alias>
 
+        <activity android:name=".activities.FormDownloadListActivity" />
+
         <activity-alias
             android:name=".activities.FormDownloadList"
             android:targetActivity=".activities.FormDownloadListActivity">
             <intent-filter>
                 <action android:name="org.odk.collect.android.FORM_DOWNLOAD" />
-                <category android:name="android.intent.category.DEFAULT"/>
+
+                <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.dir/vnd.odk.form" />
             </intent-filter>
         </activity-alias>
 
+        <activity
+            android:name=".activities.DeleteSavedFormActivity"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".gdrive.GoogleSheetsUploaderActivity"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".activities.InstanceUploaderListActivity"
+            android:configChanges="orientation|screenSize" />
+
         <activity-alias
             android:name=".activities.InstanceUploaderList"
-            android:targetActivity=".activities.InstanceUploaderListActivity" >
+            android:targetActivity=".activities.InstanceUploaderListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
@@ -244,15 +187,34 @@ the specific language governing permissions and limitations under the License.
             </intent-filter>
         </activity-alias>
 
+        <activity android:name=".activities.InstanceUploaderActivity" />
+
         <activity-alias
             android:name=".activities.InstanceUploaderActivity"
             android:targetActivity=".activities.InstanceUploaderActivity">
             <intent-filter>
                 <action android:name="org.odk.collect.android.INSTANCE_UPLOAD" />
-                <category android:name="android.intent.category.DEFAULT"/>
+
+                <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.dir/vnd.odk.instance" />
             </intent-filter>
         </activity-alias>
+
+        <activity android:name=".activities.AboutActivity" />
+        <activity android:name=".configure.qr.QRCodeTabsActivity" />
+        <activity android:name=".preferences.PreferencesActivity" />
+        <activity android:name=".preferences.AdminPreferencesActivity" />
+        <activity android:name=".activities.FormHierarchyActivity" />
+        <activity android:name=".activities.ViewOnlyFormHierarchyActivity" />
+        <activity android:name=".activities.GeoPointActivity" />
+        <activity android:name=".activities.GeoPointMapActivity" />
+        <activity android:name=".activities.GeoPolyActivity" />
+        <activity android:name=".activities.FormMapActivity" />
+        <activity android:name=".activities.BearingActivity" />
+        <activity
+            android:name=".activities.SplashScreenActivity"
+            android:theme="@android:style/Theme.Dialog" />
 
         <activity-alias
             android:name=".activities.SplashScreenActivity"
@@ -265,7 +227,40 @@ the specific language governing permissions and limitations under the License.
             </intent-filter>
         </activity-alias>
 
-        <!-- Enable Shortcuts for Command Actions -->
+        <activity android:name=".activities.CaptureSelfieActivity" />
+        <activity android:name=".activities.WebViewActivity" />
+        <activity android:name=".activities.CaptureSelfieVideoActivity" /> <!-- Configure this key by setting GOOGLE_MAPS_API_KEY in collect_app/secrets.properties. -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/GOOGLE_MAPS_API_KEY" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"
+            tools:replace="android:value" /> <!-- integer/google_play_services_version -->
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="@bool/CRASHLYTICS_ENABLED" />
+
+        <uses-library
+            android:name="com.google.android.maps"
+            android:required="false" />
+        <!--
+             ******************External API, DO NOT CHANGE BEFORE DISCUSSING***********************
+             * The providers and activities below are available for external applications to      *
+             * integrate with and are actively in use. If one of these needs to change for some   *
+             * reason, it needs to be placed on a deprecation path so users can adapt before the  *
+             * change. If an activity needs to be renamed internally, use an activity-alias. If   *
+             * the external API needs to be expanded, introduce carefully-named actions.          *
+             **************************************************************************************
+        -->
+        <provider
+            android:name=".provider.FormsProvider"
+            android:authorities="org.odk.collect.android.provider.odk.forms"
+            android:exported="true" />
+        <provider
+            android:name=".provider.InstanceProvider"
+            android:authorities="org.odk.collect.android.provider.odk.instances"
+            android:exported="true" /> <!-- Enable Shortcuts for Command Actions -->
         <activity
             android:name=".activities.AndroidShortcuts"
             android:label="ODK Form"
@@ -280,6 +275,6 @@ the specific language governing permissions and limitations under the License.
         <service
             android:name=".storage.migration.StorageMigrationService"
             android:exported="false" />
-
     </application>
+
 </manifest>
